--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <li><a href="#">GitHub</a></li>
                 <li><a href="#">Ikuti kami di facebook</a></li>                
                 <li>
-                    <div class="daftar"><a href="daftar.html">Daftar</a></div>
+                    <div class="daftar"><a href="febry/daftar.html">Daftar</a></div>
                 </li>
-                <li><a href="login.html">Masuk</a></li>
+                <li><a href="febry/login.html">Masuk</a></li>
             </ul>
         </div>
 
@@ -29,7 +29,7 @@
     <header>
         <ul>
             <li><h2><a href="index.html">Home</a></h2></li>
-            <li><h2><a href="about-us.html">About Us</a></h2></li>
+            <li><h2><a href="febry/about-us.html">About Us</a></h2></li>
             <li><h2><a href="#">Contact Us</a></h2></li>
         </ul>
 
