--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul>
             <li><h2><a href="index.html">Home</a></h2></li>
             <li><h2><a href="febry/about-us.html">About Us</a></h2></li>
-            <li><h2><a href="#">Contact Us</a></h2></li>
+            <li><h2><a href="jody/contact-us.html">Contact Us</a></h2></li>
         </ul>
 
     </header>
