--- a/jody/contact-us.html
+++ b/jody/contact-us.html
@@ -49,7 +49,7 @@
       <h4 id="sosmed">indonesiacomputervision@gmail.com</h4>
       <img id="icon2" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Ff%2Fff%2FFacebook_logo_36x36.svg%2F1200px-Facebook_logo_36x36.svg.png&f=1&nofb=1" />
       <h4 id="sosmed">Indonesia Computer Vision Community</h4>
-      <img id="icon3" src="img/whatsapp-icon-3936.png"/>
+      <img id="icon3" src="../img/whatsapp-icon-3936.png"/>
       <h4 id="sosmed">0812345678910</h4>
       
     </form>
